config/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8ops-system
  labels:
    app.kubernetes.io/name: k8ops
